--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>FORMA STUDIO</title>
+    <title>tech-tracker</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
 
     <div id="content" class="row"></div>
 
-    <form class="form">
+    <form class="form" id="form">
         <h2 class="heading">Добавить технологию</h2>
         <div class="form-control">
             <label for="title">Название</label>
@@ -31,7 +31,7 @@
             <label for="description">Название</label>
             <input type="text" id="description" name="description" placeholder="Введите описание">
         </div>
-        <button type="button" class="btn">Создать</button>
+        <button type="submit" class="btn">Создать</button>
     </form>
 </div>
 
