--- a/index.html
+++ b/index.html
@@ -1,51 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>tech-tracker</title>
+    <title>Tech-Tracker</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
-<div class="container">
-    <h2 class="heading">Ваш прогресс</h2>
-    <div class="progress">
-        <div id="progress" class="progress-bar"></div>
+    <div class="container">
+        <h2 class="heading">Ваш прогресс</h2>
+        <div class="progress">
+            <div id="progress" class="progress-bar"></div>
+        </div>
+        
+        <div id="content" class="row">
+            <button id="deleteCardButton" type="button" class="card__close" aria-label="Close">×</button>
+
+        </div>
+
+        <form class="form" id="form">
+            <h2 class="heading">Добавить технологию</h2>
+            <div class="form-control">
+                <label for="title">Название</label>
+                <input type="text" id="title" name="title" placeholder="Введите название">
+            </div>
+            <div class="form-control">
+                <label for="description">Описание</label>
+                <input type="text" id="description" name="description" placeholder="Введите описание">
+            </div>
+            <button type="submit" class="btn">Создать</button>
+        </form>
     </div>
 
-    <div id="content" class="row"></div>
-
-    <form class="form" id="form">
-        <h2 class="heading">Добавить технологию</h2>
-        <div class="form-control">
-            <label for="title">Название</label>
-            <input type="text" id="title" name="title" placeholder="Введите название">
+    <div id="modal" class="modal">
+        <h2>JavaScript</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+            electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+            Aldus PageMaker including versions of Lorem Ipsum.</p>
+        <hr>
+        <div>
+            <input type="checkbox" id="done">
+            <label for="done">Выучил</label>
         </div>
-        <div class="form-control">
-            <label for="description">Название</label>
-            <input type="text" id="description" name="description" placeholder="Введите описание">
-        </div>
-        <button type="submit" class="btn">Создать</button>
-    </form>
-</div>
-
-<div id="modal" class="modal">
-    <h2>JavaScript</h2>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-    <hr>
-    <div>
-        <input type="checkbox" id="done">
-        <label for="done">Выучил</label>
     </div>
-</div>
-<div id="backdrop" class="modal-backdrop"></div>
-    
-<script src="js/script.js"></script>
+    <div id="backdrop" class="modal-backdrop"></div>
+
+    <script src="js/script.js"></script>
 </body>
+
 </html>
